[gd_scene load_steps=2 format=3 uid="uid://c7xcjpknu3hi4"]

[ext_resource type="Script" path="res://Scenes/Menus/Main Screen.gd" id="1_ctt6o"]

[node name="Main Screen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ctt6o")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 540.0
offset_bottom = 960.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2

[node name="Simple Shoot Em Up" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Simple Shoot Em Up"

[node name="Start Game" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game
"

[node name="Level Select" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Level Select
"

[node name="Quit Game" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Start Game" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Level Select" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Quit Game" to="." method="_on_quit_game_pressed"]
